# textboard

./: .gitignore  README.md  pyproject.toml
tests/: test_math.py  test_plot.py
textboard/: __init__.py  __main__.py
