[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "textboard"
authors = [{name = "Tom Nickson", email = "me@tomnickson.com"}]
dynamic = ["version", "description"]

requires = [
    "scipy"
]

[project.urls]
Home = "https://github.com/c0g/textboard"